--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,23 @@ version = "0.1.0"
 description = ""
 authors = ["Kenya Nonaka"]
 readme = "README.md"
-packages = [{include = "sdne_lightning"}]
+packages = [{include = "sdne_lightning", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+numpy = "^1.24.1"
+torch = "^1.13.1"
+pytorch-lightning = "^1.9.0"
+pandas = "^1.5.3"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.1"
+black = "^22.12.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+sdne = "sdne_lightning.__init__:main"
