--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,14 @@ numpy = "^1.24.1"
 torch = "^1.13.1"
 pytorch-lightning = "^1.9.0"
 pandas = "^1.5.3"
+jsonlines = "^3.1.0"
+tensorboard = "^2.11.2"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
 black = "^22.12.0"
+ipykernel = "^6.20.2"
 
 [build-system]
 requires = ["poetry-core"]
